--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -16,9 +16,9 @@
 
     <!-- Project-specific properties -->
     <exec.mainClass>com.google.sps.ServerMain</exec.mainClass>
-    <googleCloudProjectId>YOUR_PROJECT_ID_HERE</googleCloudProjectId>
-  </properties>
-
+    <googleCloudProjectId>jsoto-sps-spring21</googleCloudProjectId>
+  </properties>    
+    
   <dependencies>
     <!-- Java Servlets API -->
     <dependency>
@@ -38,6 +38,26 @@
       <artifactId>jetty-annotations</artifactId>
       <version>${jetty.version}</version>
     </dependency>
+    <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.6</version>
+    </dependency>
+
+    <!-- Datastore -->
+    <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-datastore</artifactId>
+        <version>1.104.0</version>
+    </dependency>
+
+    <!-- Jsoup -->
+    <dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.13.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
